ADD IA GENERATOR

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -7,7 +7,7 @@
 <div class="show-character-container">
     <div class="show-character-img-content">
         <div class="show-character-image-div">
-            <%= cl_image_tag @character.univers_class.photo.key, alt: @character.univers_class.name, class: 'show-character-image', size: "200x200" %>
+            <%= cl_image_tag @character.photo.key, alt: @character.univers_class.name, class: 'show-character-image', size: "200x200" %>
         </div>
 
         <div class="show-character-content">
