--- a/app/views/characters/image.html.erb
+++ b/app/views/characters/image.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag(@image_url, alt: 'Generated Character Image', size: '600x400') %>
+<%= cl_image_tag(@character.photo.key, alt: 'Generated Character Image', size: '1054x1054') %>
