add a new partial

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,5 +6,6 @@
 @import "form_legend_clear";
 @import "my_buttons";
 @import "navbar";
+@import "off_canvas_side_bar";
 @import "progress_bar";
 @import "title_page_top";
