--- a/app/assets/stylesheets/components/_off_canvas_side_bar.scss
+++ b/app/assets/stylesheets/components/_off_canvas_side_bar.scss
@@ -1,47 +1,28 @@
-/* Off-canvas styling */
-.off-canvas {
+/* app/assets/stylesheets/components/_off_canvas_side_bar.scss */
+.off-canvas-toggle {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    z-index: 1000; /* Assurez-vous que le bouton est au-dessus des autres éléments */
+  }
+  
+  .off-canvas {
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
     position: fixed;
     top: 0;
     left: 0;
     height: 100%;
     width: 250px;
-    max-width: 100%;
-    background-color: #333;
-    color: #fff;
-    z-index: 2000;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease-in-out;
+    background-color: #fff;
+    z-index: 999; /* Assurez-vous que la barre de navigation est au-dessus des autres éléments */
   }
   
   .off-canvas.show {
     transform: translateX(0);
-  }
-  
-  .off-canvas .list-link-navbar {
-    padding: 1rem;
-  }
-  
-  .off-canvas .list-navbar a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    padding: 0.5rem 0;
-  }
-  
-  .off-canvas .list-navbar a:hover {
-    background-color: #444;
-  }
-  
-  /* Style for the toggle button */
-  .off-canvas-toggle {
-    position: fixed;
-    top: 1rem;
-    left: 1rem;
-    z-index: 2100;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 0.5rem;
-    cursor: pointer;
   }
   
