--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<!-- app/views/shared/_navbar.html.erb -->
 <nav class="off-canvas" id="offCanvasNavbar" data-controller="navbar" data-navbar-target="navbar">
   <div class="navbar-content">
     <div class="list-link-navbar">
@@ -22,4 +23,4 @@
     </div>
   </div>
 </nav>
-<button class="off-canvas-toggle" id="offCanvasToggle" data-navbar-target="toggle">☰</button>
+<button class="off-canvas-toggle" id="offCanvasToggle" data-navbar-target="toggle"><i class="fa-brands fa-d-and-d"></i></button>
