--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,6 @@
 <!-- app/views/shared/_navbar.html.erb -->
-<nav class="off-canvas" id="offCanvasNavbar" data-controller="navbar" data-navbar-target="navbar">
+<div data-controller="navbar">
+<nav class="off-canvas" id="offCanvasNavbar" data-navbar-target="navbar">
   <div class="navbar-content">
     <div class="list-link-navbar">
       <h3 class="navbar-portail-des-heros">Le portail des héros</h3>
@@ -24,3 +25,4 @@
   </div>
 </nav>
 <button class="off-canvas-toggle" id="offCanvasToggle" data-navbar-target="toggle"><i class="fa-brands fa-d-and-d"></i></button>
+</div>
