--- a/app/assets/stylesheets/components/_off_canvas_side_bar.scss
+++ b/app/assets/stylesheets/components/_off_canvas_side_bar.scss
@@ -1,9 +1,11 @@
 /* app/assets/stylesheets/components/_off_canvas_side_bar.scss */
+
 .off-canvas-toggle {
     position: fixed;
     bottom: 20px;
     left: 20px;
-    background-color: #fff;
+    background-color: #EBD18B; // Couleur dorée utilisée dans le style de l'ancienne navbar pour le contraste
+    color: #494949; // Couleur de fond de l'ancienne navbar pour le texte du bouton
     border: none;
     cursor: pointer;
     font-size: 24px;
@@ -16,13 +18,64 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh; // Hauteur de l'écran entier
     width: 250px;
-    background-color: #fff;
+    background-color: #494949; // Couleur de fond sombre de l'ancienne navbar
     z-index: 999; /* Assurez-vous que la barre de navigation est au-dessus des autres éléments */
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    box-shadow: 15px 8px 45px 7px rgba(56, 44, 44, 0.48); // Ombre pour donner de la profondeur
   }
   
   .off-canvas.show {
     transform: translateX(0);
+  }
+  
+  .navbar-content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .list-link-navbar {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .list-navbar {
+    width: 100%;
+    .link-navbar {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      transition: background-color 0.3s, color 0.3s;
+      &:hover {
+        background-color: #616161;
+        color: rgb(255, 176, 7);
+      }
+    }
+  }
+  
+  .div-avatar-pseudo {
+    width: 100%;
+    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #838383;
+  }
+  
+  .avatar {
+    height: 60px;
+    width: 60px;
+    margin: 5px;
   }
   
