--- a/app/assets/stylesheets/tutorials/_home.scss
+++ b/app/assets/stylesheets/tutorials/_home.scss
@@ -60,4 +60,7 @@
   overflow-y: auto;
   padding: 20px; // Ajouter un padding autour de la div du content
   color: #f0f0f0;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("bibliotheque.jpeg");
+  background-position: bottom;
+
 }
