--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,6 +14,7 @@
     </div>
   </div>
   <div class="lexique-content" data-lexique-target="content">
+    <div class="lexique-opacity"></div>
     <h2>Sélectionnez un mot du lexique pour voir les explications</h2>
   </div>
 </div>
