--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -4,52 +4,52 @@
     Vous pouvez maintenant lancer une recherche de partie avec votre nouveau personnage ou décider de le garder pour plus tard. Retrouvez votre personnage dans votre tableau de bord.</h3>
 </div>
 
-<div class="show-character-container">
-    <div class="show-character-img-content">
-        <div class="show-character-image-div">
-            <%= cl_image_tag @character.photo.key, alt: @character.univers_class.name, class: 'show-character-image', size: "200x200" %>
-        </div>
+<div class="show-character-container" data-controller="character" data-character-character-id="<%= @character.id %>">
+  <div class="show-character-img-content">
+    <div class="show-character-image-div">
+      <%= cl_image_tag @character.photo.key, alt: @character.univers_class.name, class: 'show-character-image', size: "200x200", data: { character_target: "photo" } %>
+    </div>
 
-        <div class="show-character-content">
-            <div class="show-character-name-div">
-                <h1 class="show-character-name"><%= @character.name %></h1>
-            </div>
-            <div class="show-character-univers-race-class-available">
-                <div class="show-character-univers-race-class-available-display">
-                    <p>Univers</p>
-                    <p>Race</p>
-                    <p>Classe</p>
-                </div>
-                <div class="show-character-univers-race-class-available-content">
-                    <p><%= @character.universe.name %></p>
-                    <p><%= @character.race.name %></p>
-                    <p><%= @character.univers_class.name %></p>
-                </div>
-            </div>
+    <div class="show-character-content">
+      <div class="show-character-name-div">
+        <h1 class="show-character-name"><%= @character.name %></h1>
+      </div>
+      <div class="show-character-univers-race-class-available">
+        <div class="show-character-univers-race-class-available-display">
+          <p>Univers</p>
+          <p>Race</p>
+          <p>Classe</p>
         </div>
+        <div class="show-character-univers-race-class-available-content">
+          <p><%= @character.universe.name %></p>
+          <p><%= @character.race.name %></p>
+          <p><%= @character.univers_class.name %></p>
+        </div>
+      </div>
     </div>
-    <div class="show-character-caracteristic">
-        <div class="show-character-caracteristic-display">
-            <p>Force</p>
-            <p>Dextérité</p>
-            <p>Intelligence</p>
-            <p>Constitution</p>
-            <p>Sagesse</p>
-            <p>Charisme</p>
-        </div>
-        <div class="show-character-caracteristic-content">
-            <p><%= @character.strength %></p>
-            <p><%= @character.dexterity %></p>
-            <p><%= @character.intelligence %></p>
-            <p><%= @character.constitution %></p>
-            <p><%= @character.wisdom %></p>
-            <p><%= @character.charisma %></p>
-        </div>
+  </div>
+  <div class="show-character-caracteristic">
+    <div class="show-character-caracteristic-display">
+      <p>Force</p>
+      <p>Dextérité</p>
+      <p>Intelligence</p>
+      <p>Constitution</p>
+      <p>Sagesse</p>
+      <p>Charisme</p>
     </div>
+    <div class="show-character-caracteristic-content">
+      <p><%= @character.strength %></p>
+      <p><%= @character.dexterity %></p>
+      <p><%= @character.intelligence %></p>
+      <p><%= @character.constitution %></p>
+      <p><%= @character.wisdom %></p>
+      <p><%= @character.charisma %></p>
+    </div>
+  </div>
 </div>
 
 <!-- Backstory section -->
-<div class="show-character-backstory">
+<div class="show-character-backstory" data-character-target="backstory">
   <h2>L'histoire de <%= @character.name %></h2>
   <p>
     <%= @character.backstory.present? ? @character.backstory.html_safe : "L'histoire n'a pas encore été générée." %>
@@ -58,10 +58,10 @@
 
 <!-- Action Utilisateur -->
 <div class="btn-show-container">
-    <%= link_to 'Découvrir le lexique', posts_path, class: "button-#{@character.universe.name.downcase.tr(' ', '-')}" %>
-    <% if active_party = @character.parties.where('party_characters.status = ?', 'active').first %>
-        <%= link_to 'Rejoindre ma partie', party_path(active_party), class: "button-#{@character.universe.name.downcase.tr(' ', '-')}" %>
-    <% else %>
-        <%= link_to 'Rejoindre ma partie', parties_path, class: "button-#{@character.universe.name.downcase.tr(' ', '-')}" %>
-    <% end %>
+  <%= link_to 'Découvrir le lexique', posts_path, class: "button-#{@character.universe.name.downcase.tr(' ', '-')}" %>
+  <% if active_party = @character.parties.where('party_characters.status = ?', 'active').first %>
+    <%= link_to 'Rejoindre ma partie', party_path(active_party), class: "button-#{@character.universe.name.downcase.tr(' ', '-')}" %>
+  <% else %>
+    <%= link_to 'Rejoindre ma partie', parties_path, class: "button-#{@character.universe.name.downcase.tr(' ', '-')}" %>
+  <% end %>
 </div>
