--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -5,10 +5,10 @@
       Vous pouvez maintenant lancer une recherche de partie avec votre nouveau personnage ou décider de le garder pour plus tard. Retrouvez votre personnage dans votre tableau de bord.</h3>
   </div>
 
-  <div class="show-character-container" data-controller="character" data-character-character-id="<%= @character.id %>">
+  <div class="show-character-container" data-controller="backstory" data-backstory-character-id="<%= @character.id %>">
     <div class="show-character-img-content">
       <div class="show-character-image-div">
-        <%= cl_image_tag @character.photo.key, alt: @character.univers_class.name, class: 'show-character-image', size: "200x200", data: { character_target: "photo" } %>
+        <%= cl_image_tag @character.photo.key, alt: @character.univers_class.name, class: 'show-character-image', size: "200x200", data: { backstory_target: "photo" } %>
       </div>
 
       <div class="show-character-content">
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Backstory section -->
-    <div class="show-character-backstory" data-character-target="backstory">
+    <div class="show-character-backstory" data-backstory-target="backstory">
       <h2>L'histoire de <%= @character.name %></h2>
       <p>
         <%= @character.backstory.present? ? @character.backstory.html_safe : "L'histoire n'a pas encore été générée." %>
