--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,5 +24,5 @@
     </div>
   </div>
 </nav>
-<button class="off-canvas-toggle" id="offCanvasToggle" data-navbar-target="toggle"><i class="fa-brands fa-d-and-d"></i></button>
+<button class="off-canvas-toggle" id="offCanvasToggle" data-navbar-target="toggle"> <%= image_tag 'dice.png', alt: 'image de dé', class: "avatar" %> </button>
 </div>
