commit avant  démo

--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -128,8 +128,8 @@
           </div>
         </div>
       <div class="aleatoire">
-        <h5>ou bien laisse l'aleatoire choisir...</h5>
-        <button class="button-destin" data-action="click->character#random">Ta Destinée !</button>
+        <h5>Laisse le hasard choisir pour toi..  </h5>
+        <button class="button-destin" data-action="click->character#random">LANCER LES DÉS!</button>
       </div>
     </div>
     <% when 9 %>
