--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -221,10 +221,12 @@
 }
 
 .aleatoire {
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 60px;
+  align-content: center;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 .caracteristiques-builder {
