--- a/app/assets/stylesheets/components/_my_buttons.scss
+++ b/app/assets/stylesheets/components/_my_buttons.scss
@@ -54,25 +54,13 @@
 
 // Specific button with different styles
 .button-destin {
-  margin-left: 250px;
-  margin-right: 250px;
-  background: #6b6b6b;
-  color: rgb(255, 255, 255);
-  letter-spacing: 1px;
-  padding: 5px 7px;
-  text-align: center;
-  text-decoration: none;
-  border-style: none;
-  font-weight: bold;
-  font-size: 19px;
-  border: 4px double #ffde238f;
-  font-family: $headers-font;  // Utilisation de la variable pour la police des titres
-  transition-duration: 0.5s;
-  box-shadow: 10px 9px 5px -5px rgba(255, 255, 255, 0.377);
-  border-radius: 18px;
+   @extend .button-base;
+  border: 2px solid;
+  border-color: #edd86459;
+  box-shadow: 4px 5px 10px -6px #edd86459;
 
   &:hover {
-    background-color: #252525;
+    color: rgb(247, 231, 87);
   }
 }
 
