travail en cours

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,8 @@
 // Your CSS partials
 @import "characters/index";
 @import "components/index";
+@import "dashboard/index";
 @import "pages/index";
 @import "parties/index";
 @import "tutorials/index";
 @import "universes/index";
-
