--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
         <li class="list-navbar"><%= link_to 'Lexique', posts_path, class: 'link-navbar' %></li>
         <li class="list-navbar"><%= link_to 'Univers', universes_path, class: 'link-navbar' %></li>
         <li class="list-navbar"><%= link_to 'Créer mon personnage', universes_path, class: 'link-navbar' %></li>
-        <li class="list-navbar"><a class="link-navbar" href="#contact">Tableau de bord</a></li>
+        <li class="list-navbar"><%= link_to 'Tableau de bord', dashboard_index_path, class: 'link-navbar' %></li>
       </ul>
     </div>
     <div class="div-avatar-pseudo">
