--- a/app/assets/stylesheets/tutorials/_home.scss
+++ b/app/assets/stylesheets/tutorials/_home.scss
@@ -63,4 +63,16 @@
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("bibliotheque.jpeg");
   background-position: bottom;
 
+  h2 {
+    text-align: center;
+    font-weight: bold;
+  }
+
+  h3 {
+    padding-top: 15px;
+  }
+
+  .p-content {
+      font-size: 18px;
+  }
 }
