--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -227,6 +227,7 @@
   align-content: center;
   align-items: flex-end;
   justify-content: center;
+  align-items: center;
 }
 
 .caracteristiques-builder {
