--- a/app/assets/stylesheets/universes/_home.scss
+++ b/app/assets/stylesheets/universes/_home.scss
@@ -1,5 +1,5 @@
 .portal{
-  background-image: url("portail-empty-center.png");
+  background-image: url("Portail-univers.png");
   top: 0;
   position: absolute;
   left: 0;
@@ -12,7 +12,11 @@
 }
 .carousel-control-next, .carousel-control-prev{
   z-index: 4;
+  color: transparent;
+   .icone{
+   display: none;
  }
+}
 .container_universes {
   display: flex;
   flex-direction: column;
