dé qui tourne suyr liui même

--- a/app/assets/stylesheets/characters/_show.scss
+++ b/app/assets/stylesheets/characters/_show.scss
@@ -132,3 +132,7 @@
   justify-content: space-evenly;
   font-family: $text-font;
 }
+.show-character-backstory{
+  background-color: #000000d5;
+  height: 100vh;
+}
