--- a/app/assets/stylesheets/components/_cursor.scss
+++ b/app/assets/stylesheets/components/_cursor.scss
@@ -30,3 +30,6 @@ form {
 select {
   cursor: url('pointer.png'), pointer !important;
 }
+span {
+  cursor: url('pointer.png'), pointer !important;
+}
