--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -128,8 +128,8 @@
           </div>
         </div>
       <div class="aleatoire">
-        <h5>Laisse le hasard choisir pour toi..  </h5>
-        <button class="button-destin" data-action="click->character#random">LANCER LES DÉS!</button>
+        <h5>Tu peux laisser le dé générer tes valeurs:</h5>
+        <span class='btn-dice' data-action="click->character#random"><%= image_tag 'btn-dice.png', alt: 'image de dé 20' %></span>
       </div>
     </div>
     <% when 9 %>
