--- a/app/assets/stylesheets/characters/_edit.scss
+++ b/app/assets/stylesheets/characters/_edit.scss
@@ -3,6 +3,9 @@
     margin: 0 auto;
     padding: 20px;
     text-align: center;
+    max-height: 100vh; /* Fixer la hauteur maximale à celle de l'écran */
+    overflow-y: auto; /* Activer le défilement vertical si nécessaire */
+    box-sizing: border-box; /* Inclure le padding dans la hauteur totale */    
 
     .character_name {
       font-size: 24px;
@@ -33,7 +36,6 @@
       color: rgb(0, 0, 0);
     }
 
-
     .progress-bar {
       background: #ffffff;
       border-radius: 5px;
@@ -46,13 +48,9 @@
       }
     }
 
-
-
-
     .progression-text {
       color: #EBD18B; /* changer la couleur du progession %tage */
     }
-
 
     p {
       font-size: 16px;
@@ -78,7 +76,6 @@
           padding: 5px 5px 0 5px;
         }
     }
-
 
     .option-item:hover {
       border-color: #76c7c0;
@@ -132,7 +129,6 @@
     }
 
     .modal-content {
-
       color: #000000;
 
       h5 {
@@ -154,11 +150,7 @@
         flex-direction: column;
         align-items: center;
         margin: 0 10px;
-
-
-
         color: #ffffff;
-
 
         label {
           font-size: 14px;
@@ -203,6 +195,7 @@
         }
       }
     }
+
     .toggle-modal{
     margin: -30px 10px 10px 0px;
     border-width: medium;
