--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,9 +1,12 @@
 <!-- app/views/characters/show.html.erb -->
 <div data-controller="backstory" data-backstory-character-id-value="<%= @character.id %>">
   <div class="text-affichage-show-character-div">
-    <h3 class="text-affichage-show-character">Félicitations ! Vous venez de créer votre personnage !
-      Vous pouvez maintenant lancer une recherche de partie avec votre nouveau personnage ou décider de le garder pour plus tard. Retrouvez votre personnage dans votre tableau de bord.</h3>
-  </div>
+    <h3 class="text-affichage-show-character">
+      Félicitations ! Votre personnage est prêt !
+    </h3>
+    <p class="text-affichage-description">
+        Lancez une recherche de partie ou conservez-le pour plus tard. Retrouvez-le dans votre tableau de bord.
+    </p>
 
   <div class="show-character-container">
     <div class="show-character-img-content">
