--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -24,9 +24,9 @@
         </div>
         <div class="show-character-univers-race-class-available">
           <div class="show-character-univers-race-class-available-display">
-            <p>Univers</p>
-            <p>Race</p>
-            <p>Classe</p>
+              <p><i class="fas fa-globe"></i></p>
+              <p><i class="fas fa-paw"></i></p>
+              <p><i class="fas fa-user-shield"></i></p>
           </div>
           <div class="show-character-univers-race-class-available-content">
             <p><%= @character.universe.name %></p>
