--- a/app/assets/stylesheets/characters/_show.scss
+++ b/app/assets/stylesheets/characters/_show.scss
@@ -42,6 +42,7 @@
   background: rgba(255, 255, 255, 0.8); /* Fond clair */
   border-radius: 7px;
   color: #000000; /* Texte noir */
+  box-shadow: 13px 7px 14px 3px rgba(56, 44, 44, 0.49);
 }
 
 .show-character-name-div {
@@ -65,6 +66,7 @@
   color: #000000; /* Texte noir pour ces éléments */
   background: rgba(255, 255, 255, 0.64); /* Fond clair semi-transparent pour lisibilité */
   border-radius: 5px;
+  align-items: center;
 }
 
 .show-character-univers-race-class-available-display,
