dashboard back finis

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,14 +1,14 @@
 <div class="dashboard">
 
-  <div class="mes-messsages">
-    <button class="boutton-mes-messages">Mes messsages</button>
+  <div class="mes-messages">
+    <button class="boutton-mes-messages"><%= link_to 'Mes messages', parties_path %></button>
   </div>
 
   <div class="mes-personnages">
-    <button class="boutton-mes-personnages">Mes personnages</button>
+    <button class="boutton-mes-personnages"><%= link_to 'Mes personnages', characters_path %></button>
   </div>
 
   <div class="mes-parties">
-    <button class="boutton-mes-parties">Mes parties</button>
+    <button class="boutton-mes-parties"><%= link_to 'Mes parties', parties_path %></button>
   </div>
 </div>
