--- a/app/assets/stylesheets/dashboard/_home.scss
+++ b/app/assets/stylesheets/dashboard/_home.scss
@@ -3,17 +3,24 @@
   height: 100vh;
   display: flex;
   justify-content: space-around;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
 
   .mes-personnages {
     position: relative;
 
     .boutton-mes-personnages{
       position: absolute;
-      top: 100px;
-      bottom: 10px;
-      left: 10px;
-      right: 10px;
+      bottom: 325px;
+      left: -94px;
     }
+
+
   }
 
   .mes-parties {
@@ -21,10 +28,8 @@
 
     .boutton-mes-parties{
       position: absolute;
-      top: 10px;
-      bottom: 10px;
-      left: 10px;
-      right: 10px;
+      top: 442px;
+      left: -192px;
     }
   }
 
@@ -33,10 +38,21 @@
 
     .boutton-mes-messages{
       position: absolute;
-      top: 10px;
-      bottom: 10px;
-      left: 10px;
-      right: 10px;
+      bottom: 660px;
+      left: 65px;
+      font-size: larger;
+      font-weight: bold;
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      border: 3px solid;
+      border-color: #fdda11;
+      border-radius: 30%;
+      color: white;
+      background-color: #00000073;
+
+      &:hover {
+        background-color: #a50606;
+        color: rgba(246, 211, 9, 0.882);
+      }
     }
   }
 }
