--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -59,8 +59,8 @@
     </div>
 
     <!-- Utilisation de la partial pour la backstory -->
-    <div class="the_backstory_area">
-      <%= render 'backstory', character: @character %>
+    <div id="backstory-content">
+      <%= render 'loader' %>
     </div>
 
     <!-- Action Utilisateur -->
