--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -1,3 +1,9 @@
+.the_loader {
+  position: relative;
+  width: 48px;
+  height: 48px;
+}
+
 .loader {
   transform: rotateZ(45deg);
   perspective: 1000px;
@@ -5,9 +11,13 @@
   width: 48px;
   height: 48px;
   color: #fff;
-}
-  .loader:before,
-  .loader:after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(45deg);
+  
+  &:before,
+  &:after {
     content: '';
     display: block;
     position: absolute;
@@ -19,11 +29,13 @@
     transform: rotateX(70deg);
     animation: 1s spin linear infinite;
   }
-  .loader:after {
+  
+  &:after {
     color: #FF3D00;
     transform: rotateY(70deg);
     animation-delay: .4s;
   }
+}
 
 @keyframes rotate {
   0% {
